--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@mdi/font": "^5.9.55",
     "@nuxtjs/eslint-config": "^6.0.0",
+    "@nuxtjs/tailwindcss": "^1.0.0",
     "eslint": "^7.22.0",
     "fibers": "^5.0.0",
     "sass": "^1.32.8",
