--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@mdi/font": "^5.9.55",
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/tailwindcss": "^1.0.0",
+    "@babel/eslint-parser": "^7.14.7",
+    "@nuxtjs/eslint-module": "^3.0.2",
     "eslint": "^7.22.0",
+    "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-vue": "^7.12.1",
     "fibers": "^5.0.0",
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1"
